syntax = "proto3";

package identity;

service IdentityService {
  rpc GetIdentity(Empty) returns (GetIdentityResponse);
  rpc SetIdentity(SetIdentityRequest) returns (Empty);
  rpc ValidateUsername(ValidateUsernameRequest) returns (ValidateUsernameResponse);
}

message Empty {}

message Identity {
  string realName = 1;
  string hostname = 2;
  string username = 3;
  string password = 4;
  bool autoLogin = 5;
}

message GetIdentityResponse {
  Identity identity = 1;
}

message SetIdentityRequest {
  Identity identity = 1;
}

message ValidateUsernameRequest {
  string username = 1;
}

message ValidateUsernameResponse {
  bool valid = 1;
}
